mod: gc垃圾回收单元测试